--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+     <script type="module" src="app.js"></script>
 </body>
 </html>
