--- a/form/Login/login.html
+++ b/form/Login/login.html
@@ -8,13 +8,23 @@
 
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
-
+<style>
+    body{
+        background-color: #1A1A21 !important;
+    }
+    .form-div{
+        background-color: #23252D;
+    }
+    input{
+        background-color: #23252D;
+    }
+</style>
 <body>
 
 
-    <div class="w-screen h-screen overflow-hidden flex items-center justify-center bg-gray-900 p-4">
-        <div class="w-full max-w-md bg-gray-800 rounded-lg shadow-md p-6">
-            <h2 class="text-white text-2xl font-semibold text-center mb-6">Sign in</h2>
+    <div class="w-screen h-screen overflow-hidden flex items-center justify-center  p-4">
+        <div class="form-div w-full max-w-md rounded-lg shadow-md p-6">
+            <h2 class="text-white text-4xl font-semibold text-center mb-6">Login</h2>
             <form class="space-y-4">
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
@@ -23,21 +33,26 @@
                 </div>
                 <div>
                     <label for="password" class="block text-sm font-medium text-gray-300">Password</label>
-                    <input type="password" id="password" required
+                    <input type="password" id="password" placeholder="**********" required
                         class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
                     <div class="text-right mt-2">
-                        <a href="#" class="text-blue-400 text-sm hover:underline">Forgot your password?</a>
+                        <a href="#" class="text-blue-400 text-sm hover:underline">Forgot your Password?</a>
                     </div>
                 </div>
                 <button type="submit"
                     class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
-                    Sign In
+                    Login With Previous Account..
                 </button>
-                <div class="flex items-center justify-center my-4">
+                <button type="submit"
+                    class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    Login With Google..
+                </button>
+                <div class="flex items-center justify-center ">
                     <hr class="flex-grow border-gray-600">
                     <span class="text-gray-400 px-3 text-sm"><b>OR</b></span>
                     <hr class="flex-grow border-gray-600">
                 </div>
+                <a href="../Sign-Up/signUp.html">
                 <button type="button"
                     class="w-full flex items-center justify-center text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                     <!-- <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -46,8 +61,9 @@
                         <path d="M5.77 14.6c-.23-.7-.35-1.44-.35-2.2s.12-1.5.35-2.2V7.33H1.28A11.997 11.997 0 0 0 0 12c0 1.99.48 3.89 1.28 5.67l4.49-3.07z"></path>
                         <path d="M12 4.76c1.67 0 3.17.58 4.36 1.72l3.23-3.22C17.96 1.12 15.24 0 12 0 7.305 0 3.275 3.68 1.28 8.33l4.49 3.07c.89-2.61 3.34-4.55 6.23-4.55z"></path>
                     </svg> -->
-                    Login with Google
+                    Create A New One...
                 </button>
+            </a>
             </form>
         </div>
     </div>
