making forget-password page

--- a/form/Login/login.html
+++ b/form/Login/login.html
@@ -36,7 +36,7 @@
                     <input type="password" id="password" placeholder="**********" required
                         class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
                     <div class="text-right mt-2">
-                        <a href="#" class="text-blue-400 text-sm hover:underline">Forgot your Password?</a>
+                        <a href="../Forget-Password/forget.html" class="text-blue-400 text-sm hover:underline">Forgot your Password?</a>
                     </div>
                 </div>
                 <button type="submit"
