--- a/form/Forget-Password/forget.html
+++ b/form/Forget-Password/forget.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forget Password</title>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
+<style>
+    body{
+        background-color: #1A1A21 !important;
+    }
+    .form-div{
+        background-color: #23252D;
+    }
+    input{
+        background-color: #23252D;
+    }
+</style>
 <body>
-    
+    <div class="w-screen h-screen overflow-hidden flex items-center justify-center  p-4">
+        <div class="form-div w-full max-w-md rounded-lg shadow-md p-6">
+            <h2 class="text-white text-4xl font-semibold text-center mb-6">Forget-Password</h2>
+            <form class="space-y-4">
+                <div>
+                    <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
+                    <input type="email" id="email" placeholder="abc@gmail.com" required
+                        class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
+                </div>
+                <button type="submit"
+                    class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    Login
+                </button>
+                <div class="flex items-center justify-center ">
+                    <hr class="flex-grow border-gray-600">
+                    <span class="text-gray-400 px-3 text-sm"><b>OR</b></span>
+                    <hr class="flex-grow border-gray-600">
+                </div>
+                <a href="../Sign-Up/signUp.html">
+                <button type="button"
+                    class="w-full flex items-center justify-center text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    Create A New One...
+                </button>
+            </a>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
