--- a/form/Sign-Up/signUp.html
+++ b/form/Sign-Up/signUp.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 
-    
+
     body{
         background-color: #1A1A21;
     }
@@ -28,22 +28,22 @@
             <h2 class="text-white text-4xl font-semibold text-center mb-6">Sign Up</h2>
             <form class="space-y-4">
                 <div>
-                    <label for="email" class="block text-sm font-medium text-gray-300">User Name</label>
+                    <label for="email" id="userName" class="block text-sm font-medium text-gray-300">User Name</label>
                     <input type="text" id="text"  placeholder="ABC" required
                         class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
                 </div>
                 <div>
-                    <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
+                    <label for="email" id="email" class="block text-sm font-medium text-gray-300">Email</label>
                     <input type="email" id="email"  placeholder="ABC@gmail.com" required
                         class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
                 </div>
                 <div>
-                    <label for="password" class="block text-sm font-medium text-gray-300">Password</label>
+                    <label for="password" id="password" class="block text-sm font-medium text-gray-300">Password</label>
                     <input type="password" id="password"  placeholder="**********" required
                         class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
                 </div><br>
-                <button type="submit"
-                    class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                <button type="submit" id="signUpBttn"
+                    class=" w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                    Create New Account
                 </button>
                 <a href="../Login/login.html">
@@ -55,7 +55,7 @@
             </form>
         </div>
     </div>
-
+<script type="module" src="signUp.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script> -->
 
 </body>
