--- a/form/Forget-Password/forget.html
+++ b/form/Forget-Password/forget.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forget Password</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 <body>
+
+    <div class="w-screen h-screen overflow-hidden flex items-center justify-center bg-gray-900 p-4">
+        <div class="w-full max-w-md bg-gray-800 rounded-lg shadow-md p-6">
+            <h2 class="text-white text-2xl font-semibold text-center mb-6">Forget Password</h2>
+            <form class="space-y-4">
+                <div>
+                    <input type="email" id="email" placeholder="Enter Forget Password E - Mail" required
+                        class="mt-1 block w-full p-2.5 text-white bg-gray-700 border border-gray-600 rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm" />
+                </div>
+                <button type="submit"
+                    class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                    Submit
+                </button>
+            </form>
+        </div>
+    </div>
     
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script> -->
 </body>
 </html>
